# sudoku

./: .gitignore  Cargo.toml  README.md  sudoku_old.cpp
examples/: codegolf.out  codegolf.rs
src/: lib.rs  main.rs
tests/: lib.rs
