[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["Marcus Xu <xumarcus.sg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
strum = "0.21"
strum_macros = "0.21"